# apex-sdk

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.cargo/: audit.toml
.github/workflows/: benchmarks.yml  ci.yml  code-quality.yml  release.yml  security.yml
apex-sdk/: Cargo.toml  README.md
apex-sdk-core/: Cargo.toml  README.md
apex-sdk-core/src/: lib.rs  mocks.rs
apex-sdk-evm/: Cargo.toml  README.md
apex-sdk-evm/src/: cache.rs  lib.rs  metrics.rs  pool.rs
apex-sdk-evm/tests/: integration_test.rs
apex-sdk-substrate/: Cargo.toml  README.md
apex-sdk-substrate/src/: lib.rs  transaction.rs  wallet.rs  xcm.rs
apex-sdk-types/: Cargo.toml  README.md
apex-sdk-types/src/: lib.rs
apex-sdk/benches/: transaction_benchmarks.rs
apex-sdk/src/: advanced.rs  builder.rs  error.rs  error_recovery.rs  lib.rs  performance.rs  sdk.rs  transaction.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/templates/: default.rs  defi.rs  nft.rs
docs/: CLI_GUIDE.md  ECOSYSTEM_INTEGRATION.md  METADATA_GENERATION.md  TYPED_METADATA.md
examples/account-manager/: README.md
examples/basic-transfer/: main.rs
examples/contract-orchestration/: README.md
examples/dao-governance/: main.rs
examples/nft-bridge/: main.rs
examples/parachain-assets/: README.md
