[package]
name = "apex-sdk-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core functionality for Apex SDK"

[dependencies]
apex-sdk-types = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
