[package]
name = "apex-sdk-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "EVM adapter for Apex SDK"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["blockchain", "evm", "ethereum", "web3", "sdk"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]
readme = "README.md"

[dependencies]
apex-sdk-core = { path = "../apex-sdk-core", version = "0.1.1" }
apex-sdk-types = { path = "../apex-sdk-types", version = "0.1.1" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }

# EVM blockchain interaction
ethers = { workspace = true, features = ["ws", "rustls"] }
url = { workspace = true }

[dev-dependencies]
futures = "0.3"
