[package]
name = "apex-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Unified Rust SDK for Substrate & EVM blockchain development"
keywords = ["blockchain", "substrate", "ethereum", "cross-chain", "web3"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]
readme = "README.md"

[dependencies]
apex-sdk-core = { path = "../apex-sdk-core", version = "0.1.1" }
apex-sdk-substrate = { path = "../apex-sdk-substrate", version = "0.1.1" }
apex-sdk-evm = { path = "../apex-sdk-evm", version = "0.1.1" }
apex-sdk-types = { path = "../apex-sdk-types", version = "0.1.1" }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
proptest = { workspace = true }
mockall = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "transaction_benchmarks"
harness = false
